Revision history for Perl module TestRail::API

0.034 2016-01-?? TEODESIAN
    - Use Capture::Tiny rahter than IO::CaptureOutput in unit tests
    - Allow users to signal Test::Rail::Parser to set a custom status
    - Fix issue where todo_pass would be marked even when a bad plan occurred
    - Add functions for TestRail 5.2 add/update/remove configurations & groups

0.033 2016-01-06 TEODESIAN
    - Fix issue where running TestRail::Parser with multiple -j in prove corrupted results
    - Add timestamps to every step reported for better test bottleneck detection

0.032 2015-08-31 TEODESIAN
    - Fix issue in getCases where arrayref filters were not handled properly
    - Add TestRail::API::typeNamesToIds
    - Add orphans option to testrail-tests, TestRail::Utils::Find::getTests
    - Add TestRail::API::updateCase
    - Add new TestRail::Utils::Find functions; getCases, findCases
    - Add new script bin/testrail-cases
    - Change all binaries into modulinos.
    - Resolve issue where testrail-lock would not function

0.031 2015-08-14 TEODESIAN
    - Update getCases to use testRail 4.0 filters, change filter args to HASHREF
    - Update TestRail::API::getCaseByName to take filter hashref too
    - Update getRunSummary and getPlanSummary to use 'labels' rather than system names
    - Add TestRail::API::statusNamesToLabels to ease interaction with above method updates
    - Change TestRail::API::translateConfigNamesToIds to accept ARRAY arguments
    - Make above function and TestRail::API::sectionNamesToIds return values in correct order
    - Change the 'spawn' option in Test::Rail::Parser (and it's callers) to be --testsuite_id
    - Add a --testsuite (name) option to Test::Rail::Parser
    - Spawning runs will now take run/plan completion status into account, spawning new runs/plans when completion is detected.
    - Removed the run_id option from Test::Rail::Parser and it's callers.  It isn't really useful in practice, and was not tested.
