@@ -5,6 +5,7 @@ Revision history for Perl module TestRail::API
     - Allow users to signal Test::Rail::Parser to set a custom status
     - Fix issue where todo_pass would be marked even when a bad plan occurred
     - Add functions for TestRail 5.2 add/update/remove configurations & groups
+    - Add bad plan step_result and a comment when not in case_per_ok & bad plan detected
 
 0.033 2016-01-06 TEODESIAN
     - Fix issue where running TestRail::Parser with multiple -j in prove corrupted results
